# fileverify-backend

./: Cargo.toml  Rocket.toml
migrations/2023-04-22-200126_users/: up.sql
migrations/2023-04-23-153412_validation_rules/: down.sql  up.sql
migrations/2023-05-01-064514_users/: up.sql
migrations/2023-05-01-065205_tokens/: up.sql
migrations/2023-05-01-065302_extension_list/: down.sql  up.sql
migrations/2023-05-01-065458_validation_rules/: down.sql  up.sql
src/: database_setup.rs  error_responder.rs  main.rs  schema.rs
src/auth/: api_errors.rs  mod.rs
src/auth/handlers/: mod.rs
src/auth/routes/: mod.rs
src/auth/services/: mod.rs
src/auth/utils/: mod.rs
src/extensions/models/: extension_list.rs  mod.rs
src/extensions/services/: extension_list_service.rs  mod.rs
src/mail/: message_layouts.rs  mod.rs
src/mail/services/: mail_service.rs  mod.rs
src/token/models/: mod.rs
src/token/services/: jwt_service.rs  mod.rs  token_service.rs
src/user/: api_errors.rs  mod.rs
src/user/handlers/: mod.rs
src/user/models/: mod.rs
src/user/routes/: mod.rs
src/user/services/: mod.rs
src/validation_rule/: api_errors.rs  mod.rs
src/validation_rule/handlers/: mod.rs
src/validation_rule/models/: advance_option.rs  extension_for_rules.rs  keyword_for_option.rs  mod.rs  validation_rule.rs
src/validation_rule/routes/: mod.rs
src/validation_rule/services/: mod.rs
