[package]
name = "fileverify-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poppler = "0.3.2"
poppler-sys-rs = "0.21.0"
regex = "1.7.3"
dotenv = "0.15.0"
serde = "1.0.159"
serde_json = "1.0.64"
serde_derive = "1.0.159"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0" 
chrono = "0.4.24"
mail-send = "0.3.3"

[dependencies.diesel]
version = "2.0.3"
features = ["postgres", "chrono", "uuid", "r2d2"]

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["secrets", "tls", "json"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde"
]
